# exe-encoder

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
ExEncode/: CMakeLists.txt  CMakeSettings.json  ExEncode.vcxproj  ExEncode.vcxproj.filters  Makefile
ExEncode/libs/: base64.cpp  base64.h
ExEncode/src/: ExEncode.cpp
src/: CMakeLists.txt  CMakeSettings.json
src/exencode/: App.cpp  BinaryFile.cpp  Converter.cpp  Encoders.cpp  ErrorHandler.cpp  Util.cpp
src/exencode/src/: App.cpp  Converter.cpp
src/exencode1/src/: App.cpp
src/include/exencode/: exencode.h
src/libs/: base64.h
src/test/: enc.txt
vcproj/: ExEncode.sln  ExEncode.vcxproj  ExEncode.vcxproj.filters
